<resources>
    <string name="app_name">CH4TOP1-ViewModel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_cupcakes">Order Cupcakes</string>
    <string name="one_cupcake">One Cupcake</string>
    <string name="six_cupcakes">Six Cupcakes</string>
    <string name="twelve_cupcakes">Twelve Cupcakes</string>
    <string name="vanilla">Vanilla</string>
    <string name="choose_flavor">Choose Flavor</string>
    <string name="chocolate">Chocolate</string>
    <string name="red_velvet">Red Velvet</string>
    <string name="salted_caramel">Salted Caramel</string>
    <string name="coffee">Coffee</string>
    <string name="subtotal_0_00">Subtotal : $0.00</string>
    <string name="next">Next</string>

</resources>