<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="68dp"
    tools:context=".fragments.StartFragment">

    <ImageView
        android:id="@+id/iv_cupcake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:src="@drawable/cupcake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_order_cupcakes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/order_cupcakes"
        android:textSize="32sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_cupcake" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_one_cupcake"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_order_cupcakes"
        android:text="@string/one_cupcake"
        android:textColor="@color/white"
        android:background="@color/btn_color"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_six_cupcakes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_one_cupcake"
        android:text="@string/six_cupcakes"
        android:textColor="@color/white"
        android:background="@color/btn_color"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_twelve_cupcakes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_six_cupcakes"
        android:text="@string/twelve_cupcakes"
        android:textColor="@color/white"
        android:background="@color/btn_color"
        />


</androidx.constraintlayout.widget.ConstraintLayout>